src/styles.css
/* You can add global styles to this file, and also import other style files */
@layer theme, base, components, utilities;

@import 'tailwindcss';

.nav-link {
    @apply text-gray-700 px-1 lg:px-3 py-2 box-content text-sm 
    hover:text-purple-700
    hover:cursor-pointer
    md:hover:-translate-y-1
    font-semibold
    transition duration-300 ease-in-out
    inline-block;
}

html {
    @apply bg-purple-100;
}

.buy-button {
    @apply bg-purple-700 text-white px-4 py-2 mt-4 w-fit hover:bg-purple-100 hover:text-purple-700 transition-colors duration-200 
        outline-solid outline-1 outline-purple-700 block content-center mx-auto
}

/* TODO make scrolling transitions that are not working right now 
@keyframes slide-out {
  to { transform: translateX(-100%); }
}

@keyframes slide-in {
  from { transform: translateX(100%); }
}

::view-transition-old(root) {
  animation: 300ms ease-out both slide-out;
}

::view-transition-new(root) {
  animation: 300ms ease-out both slide-in;
} */

